# toil-methylseq

./: .gitignore  Cargo.toml  apps.Dockerfile  apps.yaml  utils.Dockerfile
src/: bam_sort.rs  fastq_split.rs  main.rs
tests/: test_utils.py
toil_methylseq/: alignment.py  aws_utils.py  domain.py  fastqc.py  main.py  methylation_calling.py  preprocessing.py  toil-methylseq.config.json
